# capra_gpio_control

./: CMakeLists.txt  README.md  package.xml
gpio/: 98-gpio.rules
include/JetsonXavierGPIO/: jetsonGPIO.h
launch/: gpio_control.launch
src/: gpio_control.cpp
