<?xml version="1.0"?>
<package format="2">
  <name>capra_gpio_control</name>
  <version>0.0.0</version>
  <description>The capra gpio_control package</description>

  <maintainer email="leo-daniel.gosselin.1@ens.etsmtl.ca">Leo-Daniel Gosselin</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
